crates/sgf-core/tests/snapshots/ops_lanes/add_bridge_lane_0_1.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added bridge lane Gamma Refuge #0 <-> Grugmora #1 (length 264)
touched: [0, 1]
inverse: RemoveLane { a: 0, b: 1 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -28892,6 +28892,12 @@
 				length=17
 			}
  
+			{
+				to=1
+				length=264
+				bridge=yes
+			}
+ 
 		}
 		flags=
 		{
@@ -28955,6 +28961,12 @@
 				length=19
 			}
  
+			{
+				to=0
+				length=264
+				bridge=yes
+			}
+ 
 		}
 		discovery=
 		{
