crates/sgf-core/tests/snapshots/ops_lanes/add_lane_0_1.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added lane Gamma Refuge #0 <-> Grugmora #1 (length 264)
touched: [0, 1]
inverse: RemoveLane { a: 0, b: 1 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -28892,6 +28892,11 @@
 				length=17
 			}
  
+			{
+				to=1
+				length=264
+			}
+ 
 		}
 		flags=
 		{
@@ -28955,6 +28960,11 @@
 				length=19
 			}
  
+			{
+				to=0
+				length=264
+			}
+ 
 		}
 		discovery=
 		{
