crates/sgf-core/tests/snapshots/ops_lanes/move_system_786.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Moved Inegore #786 from (-59.10617, -192.19434) to (-60, -190); updated 6 lane lengths
touched: [567, 590, 786, 787]
inverse: MoveSystem { system: 786, x: -59.10617, y: -192.19434 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -67732,7 +67732,7 @@
  
 			{
 				to=786
-				length=14.03876
+				length=16.25946
 			}
  
 		}
@@ -69254,7 +69254,7 @@
  
 			{
 				to=786
-				length=13.10795
+				length=14.51034
 			}
  
 		}
@@ -82229,8 +82229,8 @@
 	{
 		coordinate=
 		{
-			x=-59.10617
-			y=-192.19434
+			x=-60
+			y=-190
 			origin=4294967295
 			randomized=yes
 			visual_height=3.65056
@@ -82258,17 +82258,17 @@
 			
 			{
 				to=567
-				length=14.03876
+				length=16.25946
 			}
  
 			{
 				to=590
-				length=13.10795
+				length=14.51034
 			}
  
 			{
 				to=787
-				length=14.03876
+				length=11.87566
 			}
  
 		}
@@ -82328,7 +82328,7 @@
 			
 			{
 				to=786
-				length=14.03876
+				length=11.87566
 			}
  
 			{
